schema定義変更
