# schema/openapi.yml
@@ -6,6 +6,13 @@ paths:
   /title-recommend:
     get:
       summary: Get title recommendations
+      parameters:
+        - name: refresh
+          in: query
+          description: cache refresh flag
+          required: false
+          schema:
+            type: boolean
       responses:
         '200':
           description: A list of recommended titles
@@ -68,7 +75,7 @@ components:
     ValidationResult:
       type: object
       properties:
-        isValid:
+        valid:
           type: boolean
         reason:
           type: string
